# osm-extractor

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build-database.yml
src/: main.rs
