[package]
name = "osm-extractor"
version = "0.1.0"
edition = "2021"

[dependencies]
osmpbf = { version = "0.3", default-features = false, features = ["zlib"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = {version = "0.37.0", features = ["bundled"] }
rstar = "0.12"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
